Adjust memory, remove non-jdk17 option